# open-bamboo-networking

./: .gitignore  .gitmodules  CMakeLists.txt  NETWORK_PLUGIN.md  README.md  STATUS.md  configure  configure.ps1
.github/workflows/: asan.yml  build.yml  release.yml
cmake/: Clients.cmake  VendorMosquittoOpenSSL35Patch.cmake  patch_bambustudio_conf.cmake.in  patch_orcaslicer_conf.cmake.in
include/obn/: agent.hpp  bambu_networking.hpp  camera.hpp  cert_store.hpp  cloud_auth.hpp  cloud_filament.hpp  cloud_presets.hpp  cloud_session.hpp  config.hpp  cover_cache.hpp  endian_compat.hpp  ftps.hpp  identity_headers.hpp  lan_tls.hpp  lan_tls_env.hpp  log.hpp  mqtt_client.hpp  os_compat.hpp  oss_sign.hpp  print_job.hpp  signing.hpp  slicer_plugin_versions.hpp  tunnel_local.hpp  tunnel_upload.hpp  version.hpp
packaging/: install.ps1  install.sh  obn.conf.in  pages-index.html.in
src/: abi_bind.cpp  abi_camera.cpp  abi_cloud.cpp  abi_filament.cpp  abi_ft.cpp  abi_http.cpp  abi_lifecycle.cpp  abi_makerworld.cpp  abi_presets.cpp  abi_print.cpp  agent.cpp  bind_cloud.cpp  camera.cpp  cert_store.cpp  cloud_auth.cpp  cloud_filament.cpp  cloud_presets.cpp  cloud_print.cpp  cloud_session.cpp  config.cpp  cover_cache.cpp  cover_server.cpp  ftps.cpp  http_client.cpp  lan_session.cpp  lan_tls.cpp  log.cpp  mqtt_client.cpp  oss_sign.cpp  print_job.cpp  print_job_naming.cpp  signing.cpp  ssdp.cpp  tls_dial.cpp  tunnel_local.cpp  tunnel_upload.cpp
src/camera/: AgoraUrl.cpp  AgoraUrl.hpp  BambuSourceHandle.hpp  CameraSourceFactory.cpp  CameraSourceFactory.hpp  ICameraSource.hpp  JpegCameraSource.cpp  JpegCameraSource.hpp  OssTutkCameraSource.cpp  OssTutkCameraSource.hpp
src/camera/oss_agora/: OssAgoraBambuSource.cpp  OssAgoraBambuSource.hpp  OssAgoraEngine.cpp  OssAgoraEngine.hpp  OssAgoraSignaling.cpp  OssAgoraSignaling.hpp
src/camera/oss_tutk/: IotcClient.cpp  IotcClient.hpp  IotcProtocol.hpp
stubs/: BambuSource.cpp  source_log.cpp
tests/: agent_test.cpp  cloud_print_test.cpp  config_stub.cpp  config_test.cpp  oss_sign_test.cpp  print_url_test.cpp  probe_plugin.cpp  remote_name_test.cpp  signing_test.cpp  tunnel_local_test.cpp  tutk_url_test.cpp
tools/: bambu6000_repl.py  check_abi_compat.sh  frida_ft_attach.sh  frida_ft_upload.js  ft_upload_test.c  probe_remote_naming.sh  repl_upload_sweep.py  tutk_ssl_log.js
tools/abi_snapshot/v02.08.00/: SOURCE_TAG  bambu_networking.hpp
tools/abi_snapshot/v02.08.01/: SOURCE_TAG  bambu_networking.hpp  symbols.txt
tools/bambu_extract_d/: .gitignore  Makefile  README.md  bambu_extract_d.cpp  bigint.cpp  bigint.h  daemon.cpp  daemon.h  daemon_embed.h  daemon_embed.h.stub  main.cpp  output.cpp  output.h  reconstruct.cpp  reconstruct.h  run.sh  slicer_cert_embed.h  version.h  watchdog_defeat_embed.h
tools/bambu_extract_d/daemon/: CMakeLists.txt
tools/bambu_extract_d/daemon/src/bambu/: BambuNetworkingPluginHandle.cpp  BambuNetworkingPluginHandle.hpp  CMakeLists.txt
tools/bambu_extract_d/daemon/src/bambu/headless/: App.cpp  App.hpp  SignalHandler.cpp  SignalHandler.hpp  bambu_daemon.cpp
tools/bambu_extract_d/daemon/src/bambu/router/: .gitkeep  LanUplink.cpp  LanUplink.hpp
tools/bambu_extract_d/daemon/src/bambu/server/: .gitkeep  IUplink.hpp
tools/bambu_extract_d/daemon/src/bambu/tls/: .gitkeep
tools/bambu_extract_d/shims/: watchdog_defeat.c  watchdog_defeat_v2.c
tools/h2s_capture_video/: CMakeLists.txt  main.cpp
tools/startup_selftest/: startup_selftest.cpp
tools/tutk_lan_probe/: CMakeLists.txt  main.cpp
